<resources>
    <string name="app_name">Third Eye</string>

    <string name="title_activity_login">Login</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login_main">Sign in</string>

    <!-- Strings related to loading screen -->
    <string name="loading_text">Open Your Eye...</string>

    <!-- Strings related to startup page -->
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="page_1_caption">The world watches through YOUR EYE</string>
    <string name="page_1_caption_details">Now you can share the news to around 100\'s of channels in INDIA in one click!</string>
    <string name="page_2_caption">Publish your stories to the news world</string>
    <string name="page_2_caption_details">Share your videos, Photos and Audios to the news channels directly from your phone</string>
    <string name="page_3_caption">Get paid for your stories</string>
    <string name="page_3_caption_details">You will get reward money in your Paytm account</string>


    <!-- Strings related to login form page -->
    <string name="login_heading">Login to the new World of NEWS</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_Phone_number_or_userID">This Phone Number or User ID is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to sign up form page -->
    <string name="signup_heading">In this large world YOU are UNIQE</string>
    <string name="prompt_username">Name</string>
    <string name="prompt_mobile_no">Mobile Number</string>
    <string name="prompt_email">Email ID</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="empty_username">Name Field can not be empty</string>
    <string name="empty_mobile_no">Mobile Number Field can not be empty</string>
    <string name="empty_email">Email ID Field can not be empty</string>
    <string name="empty_password">Password Field can not be empty</string>
    <string name="empty_confirm_password">Confirm Password Field can not be empty</string>

    <string name="incorrect_username">Name Field have only [a-z,A-Z,0-9,_, ]</string>
    <string name="uniqe_mobile">Mobile Number is already existing</string>
    <string name="incorrect_email">Wrong email ID</string>
    <string name="incorrect_mobile">Wrong Mobile Number</string>
    <string name="incorrect_password">Password must contain minimum 8 characters</string>
    <string name="incorrect_confirm_password">Password is not matching</string>
    <string name="error_terms_condition">Please select the Terms and Conditions</string>


    <!-- Strings related to Home page form page -->
    <string name="title_activity_home_page">News Feed</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="media_title">Media Selection</string>

    <string name="title_activity_camara">Camara</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Manage personal details</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your stories posted to this application
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">No Name</string>

    <string name="pref_title_add_friends_to_messages">Gender</string>
    <string name="pref_title_add_friends_to_messages1">Marital Status</string>
    <string-array name="pref_example_list_titles">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string-array name="pref_example_list_titles1">
        <item>Married</item>
        <item>Unmarried</item>
    </string-array>
    <string-array name="pref_example_list_values1">
        <item>1</item>
        <item>0</item>
    </string-array>
    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Manage Notifications</string>

    <string name="pref_title_new_message_notifications">Push message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
