<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.demo.thirdeye.LoginMainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:id="@+id/signUp_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="15dp"
            android:textStyle="bold"
            android:paddingLeft="10dp"/>

        <ImageView
            android:id="@+id/skipFromSignUpPage"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignEnd="@+id/signUp_title"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            app:srcCompat="@drawable/skip" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarThumbVertical="@null"
        android:scrollbarThumbHorizontal="@null">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:id="@+id/signupHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:gravity="center_vertical|center_horizontal|center"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:paddingTop="30dp"
            android:text="@string/signup_heading"
            android:textSize="30dp"
            android:textStyle="normal|bold" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/usernameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:hintTextAppearance="@style/TextAppearance.AppCompat">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="300dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:paddingTop="10dp"
                    android:background="@drawable/rounded_custom_edittext"
                    android:hint="@string/prompt_username"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    android:paddingLeft="5dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/mobileNumberLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:hintTextAppearance="@style/TextAppearance.AppCompat">

                <EditText
                    android:id="@+id/mobileNumber"
                    android:layout_width="300dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:paddingTop="10dp"
                    android:background="@drawable/rounded_custom_edittext"
                    android:hint="@string/prompt_mobile_no"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    android:paddingLeft="5dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:hintTextAppearance="@style/TextAppearance.AppCompat">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="300dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:paddingTop="10dp"
                    android:background="@drawable/rounded_custom_edittext"
                    android:hint="@string/prompt_email"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    android:paddingLeft="5dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:hintTextAppearance="@style/TextAppearance.AppCompat">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="300dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:paddingTop="10dp"
                    android:background="@drawable/rounded_custom_edittext"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingLeft="5dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/confirmPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:hintTextAppearance="@style/TextAppearance.AppCompat">

                <EditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="300dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:paddingTop="10dp"
                    android:background="@drawable/rounded_custom_edittext"
                    android:hint="@string/prompt_confirm_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingLeft="5dp" />

                <CheckBox
                    android:id="@+id/keepMeSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Keep Me Sign"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="5dp"/>
                <CheckBox
                    android:id="@+id/termsAndConditions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="I Agree Terms and Conditions"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="5dp"/>

            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/email_sign_up_button"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginTop="15dp"
                android:text="@string/sign_up"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:background="@drawable/rounded_custom_button" />

            <ProgressBar
                android:id="@+id/signup_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:visibility="gone"
                />
            </LinearLayout>
    </ScrollView>
</LinearLayout>
