<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.demo.thirdeye.LoginMainActivity">

    <!-- Login progress -->
    <ImageView
        android:id="@+id/skipFromLoginPage"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_gravity="right"
        app:srcCompat="@drawable/skip" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarThumbVertical="@null"
        android:scrollbarThumbHorizontal="@null">

        <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                android:id="@+id/loginHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:gravity="center_vertical|center_horizontal|center"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:paddingTop="30dp"
                android:text="@string/login_heading"
                android:textSize="35dp"
                android:textStyle="normal|bold" />


            <ImageView
                android:id="@+id/imageView"
                android:paddingTop="20dp"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:srcCompat="@drawable/thirdeye_icon"
                android:layout_gravity="center"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/emailLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearance.AppCompat"
                >


                    <AutoCompleteTextView

                        android:id="@+id/loginEmail"
                        android:layout_width="250dp"
                        android:layout_height="45dp"
                        android:paddingTop="10dp"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_custom_edittext"
                        android:hint="Phone Number/Email ID"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingLeft="5dp" />


            </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/passwordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat">

                    <EditText
                        android:id="@+id/loginPassword"
                        android:layout_width="250dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center"
                        android:paddingTop="10dp"
                        android:background="@drawable/rounded_custom_edittext"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingLeft="5dp" />



                </android.support.design.widget.TextInputLayout>
            <CheckBox
                android:id="@+id/keepMeLoginFromLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="55dp"
                android:text="Keep Me Login" />
                <TextView
                    android:id="@+id/forgetPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="Forget Password?" />

            <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/login"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_custom_button" />

            <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:visibility="gone"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
